<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink"
    android:orientation="vertical">

    <TextView
        android:id="@+id/congratulation_line_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/congratulation"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size18" />

    <TextView
        android:id="@+id/congratulation_line_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="@dimen/dim_5"
        android:paddingRight="@dimen/dim_5"
        android:text="@string/now_you_are_authorised_to_use_this_app"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size15" />

    <TextView
        android:id="@+id/congratulation_line_third"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/thanks"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size18" />
</LinearLayout>